--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
     compileSdkVersion 29
     defaultConfig {
         multiDexEnabled true
-        resConfigs "en"
+        resConfigs "en", "es"
         applicationId "maxeem.america.gdg"
         minSdkVersion 19
         targetSdkVersion 29
