--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
             xmlns:tools="http://schemas.android.com/tools"
         package="maxeem.america.gdg">
 
-    <!-- In order for our app to access the Internet, we need to define this permission. -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <!-- To access the location we need to ask for permission -->
@@ -15,13 +14,18 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:theme="@style/AppTheme"
-            tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".MainActivity">
+            tools:ignore="AllowBackup,GoogleAppIndexingWarning"
+            android:name="maxeem.america.App"
+        android:supportsRtl="true">
+        <activity android:name=".MainActivity" android:label="@string/app_title">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
