--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,19 +25,25 @@ android {
     compileSdkVersion 29
     defaultConfig {
         multiDexEnabled true
-        resConfigs "en", "es"
+        resConfigs "en"//, "es"
         applicationId "maxeem.america.gdg"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
-        versionName "1.0"
+        versionName "0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
+            applicationIdSuffix '.demo'
+            versionNameSuffix '-demo'
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            applicationIdSuffix '.dev'
+            versionNameSuffix '-dev'
         }
     }
     dataBinding {
@@ -56,19 +62,19 @@ dependencies {
 //    kapt "androidx.room:room-compiler:2.1.0"
     kapt "com.github.bumptech.glide:compiler:4.9.0"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'android.arch.work:work-runtime-ktx:1.0.1'
+//    implementation 'android.arch.work:work-runtime-ktx:1.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
     implementation 'androidx.core:core-ktx:1.2.0-alpha04'
-    implementation 'androidx.fragment:fragment-ktx:1.2.0-alpha03'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha04'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha04'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha04'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0-alpha04'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-alpha02'
-    implementation 'androidx.navigation:navigation-runtime-ktx:2.2.0-alpha02'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-alpha02'
+    implementation 'androidx.fragment:fragment-ktx:1.2.0-alpha04'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha05'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha05'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha05'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0-alpha05'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-alpha03'
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.2.0-alpha03'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-alpha03'
     implementation "androidx.recyclerview:recyclerview:1.1.0-beta04"
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+//    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 //    implementation "androidx.room:room-runtime:2.1.0"
     implementation "com.github.bumptech.glide:glide:4.9.0"
     implementation "com.google.android.gms:play-services-location:17.0.0"
@@ -84,7 +90,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
     // Testing dependencies
-    testImplementation 'junit:junit:4.12'
+//    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
