--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,10 @@ android {
     androidExtensions {
         experimental = true
     }
+    compileOptions {
+        sourceCompatibility "1.8"
+        targetCompatibility "1.8"
+    }
     kotlinOptions {
         jvmTarget = "1.8"
     }
