--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.1.0-beta04"
 //    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 //    implementation "androidx.room:room-runtime:2.1.0"
-    implementation "com.github.bumptech.glide:glide:4.9.0"
+//    implementation "com.github.bumptech.glide:glide:4.9.0"
     implementation "com.google.android.gms:play-services-location:17.0.0"
     implementation "com.google.android.material:material:1.1.0-alpha10"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
