--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,9 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
     buildToolsVersion = '29.0.2'
 }
 
