--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,7 +67,7 @@ android {
 
 dependencies {
 //    kapt "androidx.room:room-compiler:2.1.0"
-    kapt 'com.github.bumptech.glide:compiler:4.10.0'
+//    kapt 'com.github.bumptech.glide:compiler:4.10.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 //    implementation 'android.arch.work:work-runtime-ktx:1.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
@@ -96,6 +96,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
+    implementation "org.koin:koin-android:2.0.1"
+    implementation "org.koin:koin-android-viewmodel:2.0.1"
     // Testing dependencies
 //    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
