--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 //    implementation 'android.arch.work:work-runtime-ktx:1.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
-    implementation 'androidx.core:core-ktx:1.2.0-beta02'
+    implementation 'androidx.core:core-ktx:1.2.0-rc01'
     implementation 'androidx.fragment:fragment-ktx:1.2.0-rc02'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-rc02'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc02'
@@ -81,15 +81,15 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-rc02'
     implementation 'androidx.navigation:navigation-runtime-ktx:2.2.0-rc02'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-rc02'
-    implementation "androidx.recyclerview:recyclerview:1.1.0-rc01"
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 //    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 //    implementation "androidx.room:room-runtime:2.1.0"
 //    implementation "com.github.bumptech.glide:glide:4.9.0"
     implementation "com.google.android.gms:play-services-location:17.0.0"
-    implementation "com.google.android.material:material:1.2.0-alpha01"
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
-    implementation "com.squareup.moshi:moshi:1.8.0"
-    implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
+    implementation 'com.squareup.moshi:moshi:1.9.2'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.9.2'
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-moshi:2.6.2'
     implementation "org.jetbrains.anko:anko-commons:0.10.8"
